--- a/locales/de/LC_MESSAGES/django.po
+++ b/locales/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-12 12:57+0100\n"
+"POT-Creation-Date: 2019-12-14 20:09+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,133 +17,289 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-#: src/plugins/back_content/templates/back_content/article.html:28
-#: src/plugins/back_content/templates/back_content/submission.html:27
+
+#: plugins/back_content/templates/back_content/article.html:28
+#: plugins/back_content/templates/back_content/new_article.html:40
+#: plugins/back_content/templates/back_content/submission.html:27
 msgid "Title"
 msgstr "Titel"
 
-#: src/plugins/back_content/templates/back_content/article.html:33
-#: src/plugins/back_content/templates/back_content/submission.html:32
+#: plugins/back_content/templates/back_content/article.html:33
+#: plugins/back_content/templates/back_content/submission.html:32
 msgid "Subtitle"
 msgstr "Subtitel"
 
-#: src/plugins/back_content/templates/back_content/article.html:39
-#: src/plugins/back_content/templates/back_content/submission.html:48
+#: plugins/back_content/templates/back_content/article.html:39
+#: plugins/back_content/templates/back_content/submission.html:48
 msgid "Abstract"
 msgstr "Zusammenfassung"
 
-#: src/plugins/back_content/templates/back_content/article.html:44
-#: src/plugins/back_content/templates/back_content/submission.html:59
+#: plugins/back_content/templates/back_content/article.html:44
+#: plugins/back_content/templates/back_content/submission.html:59
 msgid "Language"
 msgstr "Sprache"
 
-#: src/plugins/back_content/templates/back_content/article.html:49
-#: src/plugins/back_content/templates/back_content/submission.html:64
+#: plugins/back_content/templates/back_content/article.html:49
+#: plugins/back_content/templates/back_content/new_article.html:43
+#: plugins/back_content/templates/back_content/submission.html:64
 msgid "Section"
 msgstr "Abschnitt"
 
-#: src/plugins/back_content/templates/back_content/article.html:55
-#: src/plugins/back_content/templates/back_content/submission.html:70
+#: plugins/back_content/templates/back_content/article.html:55
+#: plugins/back_content/templates/back_content/submission.html:70
 msgid "License"
 msgstr "Lizenz"
 
-#: src/plugins/back_content/templates/back_content/article.html:70
+#: plugins/back_content/templates/back_content/article.html:70
 msgid "Save Section 1"
 msgstr "Abschnitt 1 speichern"
 
-#: src/plugins/back_content/templates/back_content/article.html:80
-#: src/plugins/back_content/templates/back_content/submission.html:94
+#: plugins/back_content/templates/back_content/article.html:80
+#: plugins/back_content/templates/back_content/submission.html:94
 msgid ""
 "You can add an author by clicking the button below. This will open a popup "
 "modal for you to complete their details."
 msgstr ""
-"Durck Klick auf den Button unten können Sie eine_n Autor_in hinzufügen. Es öffnet sich ein "
-"Fenster, in dem Sie die Kontaktdaten ausfüllen können.."
+"Durck Klick auf den Button unten können Sie eine_n Autor_in hinzufügen. Es "
+"öffnet sich ein Fenster, in dem Sie die Kontaktdaten ausfüllen können.."
 
-#: src/plugins/back_content/templates/back_content/article.html:81
-#: src/plugins/back_content/templates/back_content/submission.html:95
+#: plugins/back_content/templates/back_content/article.html:81
+#: plugins/back_content/templates/back_content/submission.html:95
 msgid ""
 "If you know of an existing author, complete only the email field and they "
 "will be added as an author."
 msgstr ""
 "Wenn Sie eine Autor_in kennnen, reicht es die email-Adresse einzutragen."
 
-#: src/plugins/back_content/templates/back_content/article.html:82
-#: src/plugins/back_content/templates/back_content/author.html:8
-#: src/plugins/back_content/templates/back_content/submission.html:96
-#: src/plugins/back_content/templates/back_content/submission_author.html:8
+#: plugins/back_content/templates/back_content/article.html:82
+#: plugins/back_content/templates/back_content/author.html:8
+#: plugins/back_content/templates/back_content/submission.html:96
+#: plugins/back_content/templates/back_content/submission_author.html:8
 msgid "Add New Author"
 msgstr "Neue Autor_in"
 
-#: src/plugins/back_content/templates/back_content/article.html:86
-#: src/plugins/back_content/templates/back_content/submission.html:99
+#: plugins/back_content/templates/back_content/article.html:86
+#: plugins/back_content/templates/back_content/submission.html:99
 msgid "Current Authors"
 msgstr "Derzeitige Autor_innen"
 
-#: src/plugins/back_content/templates/back_content/article.html:91
-#: src/plugins/back_content/templates/back_content/submission.html:104
+#: plugins/back_content/templates/back_content/article.html:91
+#: plugins/back_content/templates/back_content/submission.html:104
 msgid "Name"
 msgstr "Name"
 
-#: src/plugins/back_content/templates/back_content/article.html:92
-#: src/plugins/back_content/templates/back_content/submission.html:105
+#: plugins/back_content/templates/back_content/article.html:92
+#: plugins/back_content/templates/back_content/submission.html:105
 msgid "Email"
 msgstr "Email"
 
-#: src/plugins/back_content/templates/back_content/article.html:105
-#: src/plugins/back_content/templates/back_content/submission.html:118
+#: plugins/back_content/templates/back_content/article.html:105
+#: plugins/back_content/templates/back_content/submission.html:118
 msgid "No authors yet, add one!"
 msgstr "Noch keine Autor_innen"
 
-#: src/plugins/back_content/templates/back_content/article.html:112
+#: plugins/back_content/templates/back_content/article.html:112
 msgid ""
 "You may select a main author who will receive the communications regarding "
 "your articles process through our systems. This does not have to be you."
 msgstr ""
 "Sie können eine_n Hauptautor_in auswählen. Diese_r enthält Informationen "
-"bzeüglich des Bearbeitungsfortschritts des Artikel. Sie müssen sich nicht selbst "
-"als Hauptautor_in wählen."
+"bzeüglich des Bearbeitungsfortschritts des Artikel. Sie müssen sich nicht "
+"selbst als Hauptautor_in wählen."
 
-#: src/plugins/back_content/templates/back_content/article.html:113
-#: src/plugins/back_content/templates/back_content/submission.html:124
+#: plugins/back_content/templates/back_content/article.html:113
+#: plugins/back_content/templates/back_content/submission.html:124
 msgid "Select main author"
 msgstr "Hauptautor_in wählen"
 
-#: src/plugins/back_content/templates/back_content/article.html:123
+#: plugins/back_content/templates/back_content/article.html:123
 msgid "Save Section 2"
 msgstr "Abschnitt 2 speichern"
 
-#: src/plugins/back_content/templates/back_content/article.html:245
+#: plugins/back_content/templates/back_content/article.html:245
 msgid "Save Section 4"
 msgstr "Abschnitt 4 speichern"
 
-#: src/plugins/back_content/templates/back_content/article.html:266
+#: plugins/back_content/templates/back_content/article.html:266
 msgid "Save Section 5"
 msgstr "Abschnitt 5 speichern"
 
-#: src/plugins/back_content/templates/back_content/author.html:64
-#: src/plugins/back_content/templates/back_content/submission_author.html:64
+#: plugins/back_content/templates/back_content/author.html:64
+#: plugins/back_content/templates/back_content/submission_author.html:64
 msgid "Add Author"
 msgstr "Neue Autor_in"
 
-#: src/plugins/back_content/templates/back_content/submission.html:37
+#: plugins/back_content/templates/back_content/new_article.html:20
+#: plugins/back_content/templates/back_content/submission.html:14
+msgid "New Article"
+msgstr "Neuer Artikel"
+
+#: plugins/back_content/templates/back_content/new_article.html:23
+msgid "To submit an article, click the start button below"
+msgstr "Um einen Artikel einzureichen, drücken Sie Start"
+
+#: plugins/back_content/templates/back_content/new_article.html:26
+msgid "Start Submission"
+msgstr "Einreichung starten"
+
+#: plugins/back_content/templates/back_content/new_article.html:28
+msgid "Submit JATS XML for Import"
+msgstr "Einreichung über JATS XML Import"
+
+#: plugins/back_content/templates/back_content/new_article.html:30
+msgid "Import Metadata from DOI or URL"
+msgstr "Metadaten via DOI oder URL importieren"
+
+#: plugins/back_content/templates/back_content/new_article.html:34
+msgid "Existing Articles"
+msgstr "Existierende Artikel"
+
+#: plugins/back_content/templates/back_content/new_article.html:41
+msgid "Submitted"
+msgstr "Eingereicht"
+
+#: plugins/back_content/templates/back_content/new_article.html:42
+msgid "Main Author"
+msgstr "Neue Autor_in"
+
+#: plugins/back_content/templates/back_content/new_article.html:44
+msgid "Actions"
+msgstr "Aktionen"
+
+#: plugins/back_content/templates/back_content/new_article.html:56
+msgid "View"
+msgstr "Bearbeiten"
+
+#: plugins/back_content/templates/back_content/new_article.html:57
+msgid "Delete"
+msgstr "Löschen"
+
+#: plugins/back_content/templates/back_content/new_article.html:63
+msgid "No articles in this stage"
+msgstr "Keine Artikel im workflow-Stufe"
+
+#: plugins/back_content/templates/back_content/submission.html:23
+msgid "1. Add A New Article"
+msgstr "1. Neuen Artikel hinzufügen"
+
+#: plugins/back_content/templates/back_content/submission.html:37
 msgid "Title (de)"
 msgstr "Titel (de)"
 
-#: src/plugins/back_content/templates/back_content/submission.html:42
+#: plugins/back_content/templates/back_content/submission.html:42
 msgid "Subtitle (de)"
 msgstr "Subtitel (de)"
 
-#: src/plugins/back_content/templates/back_content/submission.html:54
+#: plugins/back_content/templates/back_content/submission.html:54
 msgid "Abstract (de)"
 msgstr "Zusammenfassung (de)"
 
-#: src/plugins/back_content/templates/back_content/submission.html:123
+#: plugins/back_content/templates/back_content/submission.html:77
+msgid "Keywords"
+msgstr "Schlagwörter"
+
+#: plugins/back_content/templates/back_content/submission.html:80
+#: plugins/back_content/templates/back_content/submission.html:86
+msgid "Hit Enter to add a new keyword."
+msgstr "Drücken Sie die Eingabetaste um eine neues Schlagwort hinzuzufügen."
+
+#: plugins/back_content/templates/back_content/submission.html:83
+msgid "Keywords (de)"
+msgstr "Schlagwörter (de)"
+
+#: plugins/back_content/templates/back_content/submission.html:90
+msgid "2. Article Authors"
+msgstr "2. Autor_innen"
+
+#: plugins/back_content/templates/back_content/submission.html:123
 msgid ""
 "You may select a main author, this author will receive the communications "
 "regarding your articles process through our systems. This does not have to "
 "be you."
 msgstr ""
 "Sie können eine_n Hauptautor_in auswählen. Diese_r enthält Informationen "
-"bzeüglich des Bearbeitungsfortschritts des Artikel. Sie müssen sich nicht selbst "
-"als Hauptautor_in wählen."
+"bzeüglich des Bearbeitungsfortschritts des Artikel. Sie müssen sich nicht "
+"selbst als Hauptautor_in wählen."
+
+#: plugins/back_content/templates/back_content/submission.html:137
+msgid "3. Galleys"
+msgstr "3. Galleys"
+
+#: plugins/back_content/templates/back_content/submission.html:142
+msgid "Label"
+msgstr "Dateityp"
+
+#: plugins/back_content/templates/back_content/submission.html:143
+msgid "Filename"
+msgstr "Dateiname"
+
+#: plugins/back_content/templates/back_content/submission.html:144
+msgid "Type"
+msgstr "Typ"
+
+#: plugins/back_content/templates/back_content/submission.html:145
+msgid "Edit"
+msgstr "Bearbeiten"
+
+#: plugins/back_content/templates/back_content/submission.html:146
+msgid "Download"
+msgstr "Download"
+
+#: plugins/back_content/templates/back_content/submission.html:147
+msgid "Replace"
+msgstr "Ersetzen"
+
+#: plugins/back_content/templates/back_content/submission.html:148
+msgid "History"
+msgstr "Versionen"
+
+#: plugins/back_content/templates/back_content/submission.html:149
+msgid "Create PDF"
+msgstr "PDF erstellen"
+
+#: plugins/back_content/templates/back_content/submission.html:150
+msgid "Create EPUB"
+msgstr "EPUB erstellen"
+
+#: plugins/back_content/templates/back_content/submission.html:213
+msgid "No galleys have been uploaded."
+msgstr "Keine galleys hochgeladen."
+
+#: plugins/back_content/templates/back_content/submission.html:218
+msgid "Upload a new galley"
+msgstr "Neue galley hochladen"
+
+#: plugins/back_content/templates/back_content/submission.html:221
+msgid "4. Publication Info"
+msgstr "4. Veröffentlichungsinfo"
+
+#: plugins/back_content/templates/back_content/submission.html:245
+msgid "More Pub Info is available on the"
+msgstr "Weitere Veröffentlichungsinfo ist verfügbar unter"
+
+#: plugins/back_content/templates/back_content/submission.html:245
+msgid "Pre Publication Checklist"
+msgstr "Vor-Veröffentlichungschecklist"
+
+#: plugins/back_content/templates/back_content/submission.html:250
+msgid "5. Remote"
+msgstr "5. Entfernter Artikel"
+
+#: plugins/back_content/templates/back_content/submission.html:253
+msgid ""
+"If your article is remote, you can fill the required details here. If the "
+"remote article has a DOI, you should use it for full resolution."
+msgstr ""
+"Wenn es sich um einen entfernten Artikel handelt, können hier die Daten "
+"eingegebn werden. Wenn der Artikel eine DOI hat, sollte sie für die "
+"Auflösung verwendet werden."
+
+#: plugins/back_content/templates/back_content/submission.html:264
+msgid "6. Publish"
+msgstr "6. Veröffentlichen"
+
+#: plugins/back_content/templates/back_content/submission.html:267
+msgid ""
+"When you are ready to publish your article, press the publish button and it "
+"will be published."
+msgstr "Mit Veröffentlichen den Artikel freischalten."
